# prune-one

./: .env  Cargo.toml  docker-compose.yml
migrations/2020-01-19-175527_create_bridges/: down.sql  up.sql
migrations/2020-01-20-182913_create_bridges/: down.sql  up.sql
src/: errors.rs  main.rs  models.rs  schema.rs
src/responses/: bridges.rs  mod.rs
src/routes/: bridges.rs  mod.rs
