[package]
name = "abridge"
version = "0.1.0"
authors = ["TheViolence <violenceplg7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = { version = "1.0.105", features = ["derive"] }
